--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,7 @@ repository = "https://github.com/konstantintutsch/better-stream"
 
 [dependencies]
 tokio = { version = ">=1.49.0", features = ["full"] }
-iced = ">=0.14.0"
+iced = { version = ">=0.14.0", features = ["advanced"] }
 retina = ">=0.4.0"
+log = "0.4.29"
+env_logger = "0.11.8"
